--- a/Example/iPerspective/Base.lproj/Main_iPhone.storyboard
+++ b/Example/iPerspective/Base.lproj/Main_iPhone.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="PLI-dL-wnT">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--UIImageView+Perspective-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="EPViewController" sceneMemberID="viewController">
@@ -18,21 +18,70 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="QUO-ip-Zmp">
-                                <rect key="frame" x="-10" y="-20" width="340" height="600"/>
+                                <rect key="frame" x="-40" y="-40" width="400" height="640"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="UIImageView+Perspective" id="CEQ-Os-kSS"/>
                     <connections>
                         <outlet property="imagePerspective" destination="QUO-ip-Zmp" id="JfT-aH-0Th"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="837" y="357"/>
+        </scene>
+        <!--UIImageViewPerspective-->
+        <scene sceneID="9UX-2O-vh1">
+            <objects>
+                <viewController id="UW1-e4-kQH" customClass="EPViewController2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KQ3-aT-4Y2"/>
+                        <viewControllerLayoutGuide type="bottom" id="fHg-hd-pqG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ok4-94-O4x">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image2" translatesAutoresizingMaskIntoConstraints="NO" id="3Xv-x7-9f5" customClass="UIImageViewPerspective">
+                                <rect key="frame" x="-40" y="-40" width="400" height="620"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="UIImageViewPerspective" id="2dv-kr-hu2"/>
+                    <connections>
+                        <outlet property="imagePerspective" destination="3Xv-x7-9f5" id="2yb-DI-hmU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dvz-5m-Ac0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="837" y="1097"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="KqR-jq-xA1">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="PLI-dL-wnT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="N53-EL-FZL">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="viewControllers" id="qo5-pw-dHa"/>
+                        <segue destination="UW1-e4-kQH" kind="relationship" relationship="viewControllers" id="QwZ-OQ-WEi"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pNG-bk-Kf5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="305" y="357"/>
         </scene>
     </scenes>
     <resources>
         <image name="Image" width="389" height="721"/>
+        <image name="Image2" width="425" height="551"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
